# software-quality-reliability-security-labs

./: README.md
s25-sqr-lab-1-metrics-Mohammed-Nour/: README.md  pyproject.toml
s25-sqr-lab-1-metrics-Mohammed-Nour/.github/workflows/: main.yaml
s25-sqr-lab-1-metrics-Mohammed-Nour/app/: hangman.py
s25-sqr-lab0-poetry-ci-Mohammed-Nour/: pyproject.toml
s25-sqr-lab0-poetry-ci-Mohammed-Nour/.github/workflows/: main.yaml
s25-sqr-lab0-poetry-ci-Mohammed-Nour/app/: __init__.py
s25-sqr-lab0-poetry-ci-Mohammed-Nour/tests/: __init__.py  test_hangman.py
s25-sqr-lab2-testing-Mohammed-Nour/: .gitignore  README.md
s25-sqr-lab2-testing-Mohammed-Nour/.github/workflows/: main.yaml
s25-sqr-lab2-testing-Mohammed-Nour/tests/e2e/: test_bank.py
s25-sqr-lab2-testing-Mohammed-Nour/tests/unit/: test_account.py  test_customer.py  test_database.py  test_transaction.py
s25-sqr-lab3-coverage-Mohammed-Nour/: README.md  pyproject.toml
s25-sqr-lab3-coverage-Mohammed-Nour/.github/workflows/: main.yaml
s25-sqr-lab3-coverage-Mohammed-Nour/tests/: test_hangman.py
s25-sqr-lab4-input-Mohammed-Nour/: README.md  openapi.json  pyproject.toml
s25-sqr-lab4-input-Mohammed-Nour/tests/: test_innodrive.py
s25-sqr-lab5-random-testing-Mohammed-Nour/: README.md  pyproject.toml
s25-sqr-lab5-random-testing-Mohammed-Nour/taskManager/: main.py  task.py  taskManager.py
s25-sqr-lab5-random-testing-Mohammed-Nour/tests/: test_innodrive.py  test_taskManager.py
s25-sqr-lab6-performance-Mohammed-Nour/: Locust_2025-04-09-00h34_locustfile.py_http___0.0.0.0_5000_failuer_report.html  Locust_2025-04-09-00h43_locustfile.py_http___0.0.0.0_5000_route1.html  Locust_2025-04-09-00h48_locustfile.py_http___0.0.0.0_5000_route2.html  Locust_2025-04-09-00h54_locustfile.py_http___0.0.0.0_5000_route3.html  README.md  locustfile.py  pyproject.toml  results.csv
s25-sqr-lab7-security-Mohammed-Nour/: README.md  pyproject.toml
s25-sqr-lab7-security-Mohammed-Nour/.github/classroom/: autograding.json
s25-sqr-lab7-security-Mohammed-Nour/.github/workflows/: main.yaml
s25-sqr-lab7-security-Mohammed-Nour/app/: code.py
