[tool.poetry]
name = "project-hangman-game"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "app" }
]


[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.0.0"
pytest-cov = "^6.0.0"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
