[project]
name = "lab4-input"
version = "0.1.0"
description = ""
authors = [
    {name = "Mohammed-Nour",email = "o.shaheen1882@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx (>=0.28.1,<0.29.0)",
    "pytest (>=8.3.5,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
